Aggregate repos from user Maven settings